CMAKE_MINIMUM_REQUIRED ( VERSION 3.6 )
project(OpenLight)

IF(WIN32)
    SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:WINDOWS") 
ENDIF(WIN32)

SET(OPENLIGHT_SRC Source)
SET(OPENLIGHT_SHADER Shader)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

include_directories(${OPENLIGHT_SRC}/core)


ADD_SUBDIRECTORY(${OPENLIGHT_SRC})

set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT OpenLight)