CMAKE_MINIMUM_REQUIRED(VERSION 3.6)
PROJECT(OpenLight)

IF(WIN32)
   SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:WINDOWS")
ENDIF(WIN32)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/Source)

FILE(GLOB MAIN_CPP ${CMAKE_SOURCE_DIR}/Source/main.cpp)
SOURCE_GROUP("OpenLight" FILES ${MAIN_CPP})

FILE(GLOB CORE_SOURCE_0 ${CMAKE_SOURCE_DIR}/Source/Core/*.*)
SOURCE_GROUP("OpenLight\\Core" FILES ${CORE_SOURCE_0})

FILE(GLOB TEST_SOURCE_1 ${CMAKE_SOURCE_DIR}/Source/Test/*.*)
SOURCE_GROUP("OpenLight\\Test" FILES ${TEST_SOURCE_1})

FILE(GLOB TEST1_SOURCE_2 ${CMAKE_SOURCE_DIR}/Source/Test1/*.*)
SOURCE_GROUP("OpenLight\\Test1" FILES ${TEST1_SOURCE_2})

FILE(GLOB TEST2_SOURCE_3 ${CMAKE_SOURCE_DIR}/Source/Test2/*.*)
SOURCE_GROUP("OpenLight\\Test2" FILES ${TEST2_SOURCE_3})

FILE(GLOB TEST3_SOURCE_4 ${CMAKE_SOURCE_DIR}/Source/Test1/Test3/*.*)
SOURCE_GROUP("OpenLight\\Test1\\Test3" FILES ${TEST3_SOURCE_4})

FILE(GLOB TEST4_SOURCE_5 ${CMAKE_SOURCE_DIR}/Source/Test2/Test4/*.*)
SOURCE_GROUP("OpenLight\\Test2\\Test4" FILES ${TEST4_SOURCE_5})

FILE(GLOB TEST5_SOURCE_6 ${CMAKE_SOURCE_DIR}/Source/Test2/Test4/Test5/*.*)
SOURCE_GROUP("OpenLight\\Test2\\Test4\\Test5" FILES ${TEST5_SOURCE_6})

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/Source/Bin)

ADD_EXECUTABLE(OpenLight 
${MAIN_CPP}
${CORE_SOURCE_0} 
${TEST_SOURCE_1} 
${TEST1_SOURCE_2} 
${TEST2_SOURCE_3} 
${TEST3_SOURCE_4} 
${TEST4_SOURCE_5} 
${TEST5_SOURCE_6} 
)

INCLUDE_DIRECTORIES(&{CMAKE_SOURCE_DIR}/Library/DirectXTex)

FILE(GLOB DIRECTXTEX_SOURCE ${CMAKE_SOURCE_DIR}/Library/DirectXTex/*.*)
SOURCE_GROUP("DirectXTex\\Source" FILES ${DIRECTXTEX_SOURCE})

FILE(GLOB DIRECTXTEX_SHADER_SOURCE ${CMAKE_SOURCE_DIR}/Library/DirectXTex/Shaders/*.*)
SOURCE_GROUP("DirectXTex\\Source\\Shaders" FILES ${DIRECTXTEX_SHADER_SOURCE})

FILE(GLOB DIRECTXTEX_SHADER_COMPILED_SOURCE ${CMAKE_SOURCE_DIR}/Library/DirectXTex/Shaders/Compiled/*.inc)
SOURCE_GROUP("DirectXTex\\Source\\Shaders\\Compiled" FILES ${DIRECTXTEX_SHADER_COMPILED_SOURCE})

FILE(GLOB DIRECTXTEX_SHADER_SYMBOLS_SOURCE ${CMAKE_SOURCE_DIR}/Library/DirectXTex/Shaders/Compiled/*.pdb)
SOURCE_GROUP("DirectXTex\\Source\\Shaders\\Symbols" FILES ${DIRECTXTEX_SHADER_SYMBOLS_SOURCE})

ADD_LIBRARY(DirectXTex ${DIRECTXTEX_SOURCE} ${DIRECTXTEX_SHADER_SOURCE} ${DIRECTXTEX_SHADER_COMPILED_SOURCE} ${DIRECTXTEX_SHADER_SYMBOLS_SOURCE})
INSTALL(TARGETS DirectXTex
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib)

TARGET_LINK_LIBRARIES(OpenLight DirectXTex d3d12.lib dxgi.lib d3dcompiler.lib)