CMAKE_MINIMUM_REQUIRED ( VERSION 2.8.4 )
project(OpenLight)
ADD_DEFINITIONS(-D _CRT_SECURE_NO_WARNINGS)
ADD_DEFINITIONS(-D NOMINMAX)
IF(WIN32)
    SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:WINDOWS") 
ENDIF(WIN32)

SET(OPENLIGHT_SRC Source)
SET(OPENLIGHT_SHADER Shader)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

include_directories(${OPENLIGHT_SRC}/core)
SET(CMAKE_CXX_FLAGS "/std:c++latest")
FILE(GLOB SHADER_SOURCE ${OPENLIGHT_SHADER}/*.hlsl)
SOURCE_GROUP("Shader" FILES ${SHADER_SOURCE})


ADD_SUBDIRECTORY(${OPENLIGHT_SRC})


